<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/registbg" >

    <RelativeLayout
        android:id="@+id/relativeLayout_reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#707070" >

        <TextView
            android:id="@+id/tv_label_regist"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_alignParentLeft="true"
            android:background="#707070"
            android:gravity="center"
            android:text="@string/regist_label"
            android:textColor="#fff"
            android:textSize="25dp" />

        <ImageView
            android:id="@+id/btn_regist_back"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:src="@drawable/btn_back" />
    </RelativeLayout>

    <TextView
        android:id="@+id/reg_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18dp"
        android:layout_alignLeft="@+id/reg_username"
        android:layout_below="@+id/reg_username"
        android:layout_marginTop="30dp"
        android:text="@string/reg_label_password" />

    <TextView
        android:id="@+id/reg_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18dp"
        android:layout_alignLeft="@+id/reg_password"
        android:layout_below="@+id/reg_password"
        android:layout_marginTop="30dp"
        android:text="@string/reg_label_phone" />

    <TextView
        android:id="@+id/reg_motto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18dp"
        android:layout_alignLeft="@+id/reg_phone"
        android:layout_below="@+id/reg_phone"
        android:layout_marginTop="30dp"
        android:text="@string/reg_label_motto" />

    <TextView
        android:id="@+id/reg_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/reg_thumbnail"
        android:layout_marginLeft="20dp"
        android:text="@string/reg_label_username" />

    <ImageView
        android:id="@+id/reg_thumbnail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relativeLayout_reg"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:src="@drawable/logo" />

    <EditText
        android:id="@+id/reg_et_username"
        android:layout_width="wrap_content"
        android:layout_height="33dp"
        android:layout_alignBaseline="@+id/reg_username"
        android:layout_alignBottom="@+id/reg_username"
        android:layout_alignLeft="@+id/reg_thumbnail"
        android:background="@drawable/input_shape"
        android:hint="@string/reg_usernamehit"
        android:ems="10" >

    </EditText>

    <EditText
        android:id="@+id/reg_et_password"
        android:layout_width="wrap_content"
        android:layout_height="33dp"
        android:layout_alignBaseline="@+id/reg_password"
        android:layout_alignBottom="@+id/reg_password"
        android:layout_alignLeft="@+id/reg_et_username"
        android:layout_alignRight="@+id/reg_et_username"
        android:background="@drawable/input_shape"
        android:hint="@string/password_hint"
        android:ems="10"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/reg_et_phone"
        android:layout_width="wrap_content"
        android:layout_height="33dp"
        android:layout_alignBaseline="@+id/reg_phone"
        android:layout_alignBottom="@+id/reg_phone"
        android:layout_alignLeft="@+id/reg_et_password"
        android:background="@drawable/input_shape"
        android:hint="@string/reg_phonehint"
        android:ems="10"
        android:inputType="phone" />

    <EditText
        android:id="@+id/reg_et_motto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/reg_et_password"
        android:layout_alignTop="@+id/reg_motto"
        android:background="@drawable/input_shape"
        android:hint="@string/reg_mottohint"
        android:ems="10"
        android:inputType="textMultiLine"
        android:lines="3" />

    <Button
        android:id="@+id/btn_registgo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/oval_shape"
        android:layout_marginBottom="16dp"
        android:textSize="20dp"
        android:textColor="#fff"
        android:text="@string/btn_regist" />

</RelativeLayout>