<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/log_bg"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:background="#707070"
        >

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:src="@drawable/font_logo" />
        
        <EditText android:id="@+id/login_username" 
            android:layout_width="match_parent" 
            android:layout_height="35dp" 
            android:layout_margin="10dp"
            android:hint="@string/username_hint"
            android:background="@drawable/bg_edit_text_selector" 
            android:ems="10" />
        
        <EditText android:id="@+id/login_password" 
            android:layout_width="match_parent" 
            android:layout_height="35dp" 
            android:layout_margin="10dp"
            android:hint="@string/password_hint"
            android:background="@drawable/bg_edit_text_selector" 
            android:ems="10" 
            android:inputType="textPassword" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center" >

            <Button
                android:id="@+id/btn_log_sina"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:background="@drawable/oauth_logo_sina" />

            <Button
                android:id="@+id/btn_log_wechat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="16dp"
                android:layout_toRightOf="@+id/btn_log_sina"
                android:background="@drawable/oauth_logo_wechat" />

            <Button
                android:id="@+id/btn_log_qq"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="16dp"
                android:layout_toRightOf="@+id/btn_log_wechat"
                android:background="@drawable/oauth_logo_qq" />

            <TextView
                android:id="@+id/oauth_tip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/btn_log_wechat"
                android:layout_below="@+id/btn_log_wechat"
                android:layout_marginTop="5dp"
                android:text="@string/tv_oauth"
                android:textColor="#2f4f4f" />

        </RelativeLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_log"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:textSize="22dp"
        android:background="@drawable/oval_shape"
        android:textColor="#fff"
        android:text="@string/btn_login" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="15dp"
         >

        <TextView
            android:id="@+id/label_forgetpassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#fff"
            android:text="@string/label_forgetpass" />

        <TextView
            android:id="@+id/label_goregist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:layout_weight="1"
            android:background="#fff"
            android:text="@string/label_regist" />

    </LinearLayout>

</LinearLayout>